# duco2mqtt

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: build.yml  docker.yml
.zed/: tasks.json
docker/: BuildDockerfile
src/: bridge.rs  ducoapi.rs  ducoboxdevice.rs  ducoboxnode.rs  duconode.rs  duconodetypes.rs  duxoboxnode.rs  hassdiscovery.rs  infovalue.rs  lib.rs  modbus.rs  mqtt.rs  nodetypes.rs  test.rs
test/data/: info.json  info_nodes.json  node_actions.json
