[package]
edition     = "2021"
name        = "duco2mqtt"
version     = "0.1.4"
default-run = "duco2mqtt"

[dependencies]
bytes = "1.5.0"
env_logger = "0.11"
tokio = { version = "1.35.1", features = ["io-util", "macros", "net", "rt"] }
log = "0.4.20"
clap = { version = "4.5", features = ["derive", "env"] }
rumqttc = "0.24"
tokio-modbus = { version = "0.11", default-features = false, features = [
    "tcp",
] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
strum = { version = "0.26", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
