[package]
edition     = "2021"
name        = "duco2mqtt"
version     = "0.1.4"
default-run = "duco2mqtt"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytes = "1.6"
env_logger = "0.11"
tokio = { version = "1.38", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "time",
] }
log = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
clap-verbosity-flag = "2.2"
rumqttc = "0.24"
reqwest = { version = "0.12", features = ["rustls-tls-native-roots"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
strum = { version = "0.26", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
